--- a/src/index.css
+++ b/src/index.css
@@ -17,6 +17,7 @@ html {
 
 body {
    min-height: 100vh; 
+   overflow: hidden;
    font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
    background: linear-gradient(45deg, var(--color-dark-primary), var(--color-dark-secondary));
    color: var(--color-light-primary);
@@ -27,20 +28,21 @@ body {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    height: calc(100vh - 2px);
+    height: calc(100vh - 42px);
     max-width:500px;
     border: 2px solid var(--color-light-primary);
-    margin: auto;
+    margin: 20px auto;
 }
 
 header {
     width: calc(100%);
-    padding: 0 0.25em;
+    padding: 0.25em;
     background: linear-gradient(45deg, var(--color-light-primary), var(--color-light-secondary));
     color: var(--color-dark-primary);
     display: flex;
     justify-content: space-between;
     align-items: center;
+    font-size: 0.8em;
 }
 
 main {
@@ -51,4 +53,15 @@ main {
     justify-content: center;
     align-items: center;
     overflow: hidden;
+}
+
+footer {
+    width: 100%;
+    padding: 0.25em;
+    background: linear-gradient(45deg, var(--color-light-primary), var(--color-light-secondary));
+    color: var(--color-dark-primary);
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    font-size: 0.6em;
 }
