--- a/src/index.css
+++ b/src/index.css
@@ -32,8 +32,9 @@ body {
     align-items: center;
     height: calc(100vh - 42px);
     max-width:500px;
-    border: 2px solid var(--color-light-primary);
+    border: 4px solid var(--color-light-primary);
     margin: 20px auto;
+    border-radius: 5px;
 }
 
 header {
@@ -52,9 +53,10 @@ main {
     display: flex;
     flex-direction: column;
     flex-grow: 1;
-    justify-content: center;
+    justify-content: flex-start;
     align-items: center;
     overflow: hidden;
+    padding-top: 0.5rem;
 }
 
 footer {
